# fastapi-chat-project

./: .pre-commit-config.yaml  README.md  pyproject.toml
src/: .env  .env.example  config.py  container.py  docker-compose.yml  errors.py  main.py  middleware.py  model.py  presentation.py
src/app/auth/: container.py  routes.py
src/app/auth/domain/: user_model.py
src/app/auth/endpoint/: login.py  logout.py  refresh_token.py  registration.py
src/app/auth/repository/: user_repository.py
src/app/auth/services/: user_service.py
src/app/auth/usecase/: authentication.py
src/app/auth/util/: jwt.py
src/app/chat/: container.py  routes.py
src/app/chat/domain/: chat_model.py
src/app/chat/endpoint/: chat.py
src/app/chat/repository/: friendship_repository.py
src/app/chat/services/: friendship_service.py
src/app/chat/usecase/: user.py
src/app/chat/util/: snow_flake.py  websocket_manager.py
src/app/user/: container.py  routes.py
src/app/user/domain/: friendship_model.py
src/app/user/endpoint/: friendship.py
src/app/user/repository/: friendship_repository.py
src/app/user/services/: friendship_service.py
src/infrastructure/db/: dialect.py  mongo.py  redis.py  sqlalchemy.py
src/infrastructure/db/schema/: friendship.py  user.py
src/logs/: log.py
src/migrations/: env.py
src/migrations/versions/: 80bafa332979_create_friendship.py  d45b56a56eb9_create_user_info.py
src/scripts/: black-isort.sh  code_cleanup.sh  start.sh
src/templates/: chat.html  friendship.html  login.html  register.html
